# openapi/api.yaml
@@ -520,6 +520,19 @@ components:
       x-go-type-import:
         path: dashboard/api/internal/scopes/cluster/entities
         name: clusterEntities
+    RoleAttributes:
+      type: string
+      description: https://www.postgresql.org/docs/current/role-attributes.html#ROLE-ATTRIBUTES
+      enum:
+        - superuser
+        - login
+        - createRole
+        - createDatabase
+        - replication
+      x-go-type: clusterEntities.RoleAttribute
+      x-go-type-import:
+        path: dashboard/api/internal/scopes/cluster/entities
+        name: clusterEntities
     RoleView:
       type: object
       required:
@@ -528,7 +541,7 @@ components:
         - isGroup
         - accessLevel
         - membership
-        - flags
+        - attributes
       x-go-type: entities.RoleView
       x-go-type-import:
         path: dashboard/api/internal/scopes/cluster/entities
@@ -552,11 +565,9 @@ components:
                 type: string
               description:
                 type: string
-        flags:
-          # ТИПИЗИРОВАТЬ!
+        attributes:
           type: array
           items:
-            nullable: true
-            type: string
+            $ref: "#/components/schemas/RoleAttributes"
         accessLevel:
           $ref: "#/components/schemas/RoleAccessLevel"
